fixed some layout problems, added endless round functionallity

--- a/css/style.css
+++ b/css/style.css
@@ -1302,11 +1302,11 @@ b {
 }
 .intro-game .button-container
 {
-  width: 100%;
+  width: 80%;
   height: 7%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 .intro-game .button-container button
